<resources>
    <string name="app_name">FinalApp</string>

    <!--Login view-->
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_confirm_password">Confirm password</string>
    <string name="login_sign_in">Sign In</string>
    <string name="login_sign_up">Sign Up</string>
    <string name="login_reset_password">Reset my password</string>
    <string name="login_sign_in_google">Sign In with Google</string>
    <string name="login_forgot_password">I have forgotten my password</string>
    <string name="login_create_account">Create a new account</string>
    <string name="login_go_login">Go back to Login</string>
    <string name="text_login_or">or</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_bottom_chat">Chat</string>
    <string name="navigation_bottom_info">Info</string>
    <string name="navigation_bottom_rate">Rate</string>
    <string name="text_hint_message">Type your message</string>
    <string name="text_info_description">Android Developer</string>
    <string name="text_no_name">No name available</string>
    <string name="text_logout">LogOut</string>
    <string name="text_rate">Rate</string>
    
    <string name="dialog_title">Rate the App</string>
    <string name="dialog_hint">Lead your feedback</string>
    <string name="dialog_ok">Rate</string>
    <string name="dialog_cancel">Cancel</string>
</resources>
